--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 body{
     background-color: #0D1117;
     overflow-x: hidden;
+    text-decoration: none;
+}
+a{
+    text-decoration: none;
 }
 .sections{
     display: flex;
